# experimental

./: .gitignore  interact.hs
algorithm/: mondai12.hs  mondai13.hs  mondai14.hs  mondai15.hs  mondai17.hs  mondai18.hs
book/: lesson12.hs  lesson13.hs
brainfuck/: main.hs
brainfuck/v2/: main.hs
csharp/functional/: Program.cs  functional.csproj  functional.sln
golang/dockertest/: dockertest_test.go  go.mod  go.sum
golang/largefileinput/: go.mod  main.go  main_test.go
golang/list/: main.go
golang/monad/: go.mod  main.go
golang/notifysample/: go.mod  main.go
golang/slices/: go.mod  main.go
haskell/algorithm/: mondai10.hs  mondai11.hs  mondai16.hs  mondai18.hs  mondai7.hs
haskell/book/: lesson16.hs  lesson17.hs  lesson18.hs  lesson19.hs
haskell/brainfuck/v1/: main.hs
haskell/brainfuck/v2/: main.hs
haskell/scrap/: any-study.hs  gousei-study.hs  sample.hs
python/: main.py
rust/aggregate-csv/: Cargo.toml
rust/aggregate-csv/src/: main.rs
rust/samplecli/: Cargo.toml
rust/samplecli/src/: main.rs
rust/samplenotify/: Cargo.toml
rust/samplenotify/src/: main.rs
rust/todo/: Cargo.toml  todo.db
rust/todo/src/: main.rs
rust/todo/templates/: index.html
scrap/: foldr-study.hs
