[package]
name = "aggregate-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
csv = "1.3.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
polars = { version = "0.37.0", features = ["lazy"] }
